--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "^3.3.1",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.4.38",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint": "^7.5.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-loader": "^17.4.2"
   },
   "eslintConfig": {
     "root": true,
